--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,16 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.12.2"
 label-studio-sdk = "^1.0.5"
 spacy = "^3.8.2"
 wandb = "^0.18.5"
 torch = {version = "^2.5.0+cu118", source = "pytorch-gpu-src"}
 torchvision = {version = "^0.20.0+cu118", source = "pytorch-gpu-src"}
 torchaudio = {version = "^2.5.0+cu118", source = "pytorch-gpu-src"}
-transformers = "^4.46.0"
-accelerate = "^1.0.1"
+transformers = "<4.46.0"   # 4.45.2 is the last safe one
+accelerate = "<1.0.0"      # 0.34.2 is last before restriction
+peft = "<0.13.0"           # 0.12.x works fine with torch 2.5
 bitsandbytes = "^0.44.1"
 pytest = "^8.3.3"
 typing-extensions = "^4.12.2"
@@ -28,16 +29,15 @@ sentencepiece = "^0.2.0"
 openpyxl = "^3.1.5"
 absl-py = "^2.1.0"
 rouge-score = "^0.1.2"
-peft = "^0.14.0"
-numpy = "2.0.0"
+numpy = "^1.26"
 ipywidgets = "^8.1.5"
+pyarrow = "<16.0.0"
 
 
 [[tool.poetry.source]]
 name = "pytorch-gpu-src"
 url = "https://download.pytorch.org/whl/cu118"
 priority = "explicit"
-
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
